tests/baselines/reference/tsxFragmentReactEmit.errors.txt
file.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== file.tsx (1 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    declare var React: any;
    
    <></>; // no whitespace
    <    ></   >; // lots of whitespace
    < /*starting wrap*/ ></ /*ending wrap*/>; // comments in the tags
    <>hi</>; // text inside
    <><span>hi</span><div>bye</div></>; // children
    <><span>1</span><><span>2.1</span><span>2.2</span></><span>3</span></>; // nested fragments
    <>#</>; // # would cause scanning error if not in jsxtext